k8s/infrastructure/monitoring/grafana/base/CiliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-grafana
  namespace: grafana
spec:
  endpointSelector: {matchLabels: {app: grafana}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '3000', protocol: TCP}]]}  # Host probes
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: envoy-gateway-system}], toPorts: [ports: [{port: '3000', protocol: TCP}]]}  # Envoy Gateway
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: grafana, app.kubernetes.io/name: grafana-operator}], toPorts: [ports: [{port: '3000', protocol: TCP}]]}  # grafana-operator
  egress:
    - {toEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring, app.kubernetes.io/name: vmalertmanager}], toPorts: [ports: [{port: '9093', protocol: TCP}]]}  # Alertmanager datasource
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: victoria-logs, app.kubernetes.io/name: victoria-logs-single}}], toPorts: [ports: [{port: '9428', protocol: TCP}]]}  # VictoriaLogs datasource
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring, app.kubernetes.io/name: vmsingle}}], toPorts: [ports: [{port: '8428', protocol: TCP}]]}  # VictoriaMetrics datasource
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: envoy-gateway-system}}], toPorts: [ports: [{port: '10443', protocol: TCP}]]}  # Needed for OIDC / Authelia
    - {toFQDNs: [{matchName: grafana.com}, {matchPattern: '*.grafana.com'}], toPorts: [ports: [{port: '443', protocol: TCP}]]}  # Grafana plugin catalog / update checks
    - {toFQDNs: [{matchName: storage.googleapis.com}], toPorts: [ports: [{port: '443', protocol: TCP}]]}  # Google Cloud Storage for Grafana plugins
    - {toFQDNs: [{matchName: secure.gravatar.com}], toPorts: [ports: [{port: '443', protocol: TCP}]]}  # Google Cloud Storage for Grafana plugins
